# pack

./: package.json  vite.config.ts
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fs.rs  lib.rs  main.rs  settings.rs  utils.rs
src-tauri/src/fs/: command.rs
src-tauri/src/types/: config.rs  file_system.rs  fs.rs  mod.rs  settings.rs
src-tauri/src/types/fs/: directory.rs  file.rs  mod.rs  pack.rs
src/components/: FileTree.tsx  MultiSteps.tsx
src/context/: settings.ts
src/context/providers/: SettingsProvider.tsx
src/lib/: Commands.ts  Pack.ts  settings.ts
src/pages/: Creator.tsx  Home.tsx
src/pages/Creator/: Creator.tsx  FileTree.tsx
src/pages/Settings/: Settings.tsx
src/types/: FileSystem.ts  commands.ts  fs.ts  settings.ts
